--- a/纪念碑谷2.css
+++ b/纪念碑谷2.css
@@ -5,7 +5,7 @@
 body {
     text-align: center;
     padding: 15px;
-    background-color: powderblue;
+    background-color: #000000;
 }
 #main {
     width: 1008px;
